--- a/config/database.yml
+++ b/config/database.yml
@@ -1,3 +1,9 @@
 development:
   adapter: postgresql
   database: redmart_development
+
+production:
+  adapter: postgresql
+  database: derrqhtae7j05f
+  username: sklflpmnkgmyta
+  password: jrldXRbTVdAjDLpk3Fjj3V78U1
